...
          ),
        ),
      );
    } else {
      return Scaffold(
        appBar: AppBar(
          title: Text('Exchange/Alternatives', style: GoogleFonts.roboto(fontSize: 24, fontWeight: FontWeight.bold)),
          backgroundColor: Colors.blueAccent,
        ),
        body: SingleChildScrollView(
          child: Column(
            children: [
              aiSection,
...
